--- a/food_recipe/recipe.html
+++ b/food_recipe/recipe.html
@@ -54,7 +54,7 @@
                 <div id="video-results"></div>
                 <button id="see-more-button" style="display: none;">See More</button>
             </section>
-            <button style="background-color: blue;  border: none; padding: 10px;border-radius: 1rem;margin-left: 60rem;"><a href="recipe.html" style="color: white;text-decoration: none;">Back to top</a></button>
+            <button style="background-color: blue;  border: none; padding: 10px;border-radius: 1rem;margin-left: 60rem;"><a href="#video" style="color: white;text-decoration: none;">Back to top</a></button>
         </div>
     </div>
 
@@ -238,3 +238,4 @@ async function fetchVideos(query, pageToken = '') {
     </script>
 </body>
 </html>
+
