--- a/food_recipe/contact.html
+++ b/food_recipe/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>contactform</title>
     <link rel="stylesheet" href="contact.css">
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
@@ -15,12 +16,12 @@
                 <h2>Get in touch</h2>
                 <hr>
             </div>
-            <input type="hidden" name="access_key" value="e3f55b67-8cb3-4931-8114-d4db30dfc4b2">
+            <input type="hidden" name="access_key" value="840671aa-62bc-4c59-bb52-59884ee72f00">
             <input type="text" name="name" placeholder="your name" class="contact-inputs" required>
             <input type="email" name="email" placeholder="your email" class="contact-inputs" required>
             <textarea name="massage" placeholder="your massage" class="contact-inputs" required></textarea>
-            <button type="submit">submit <img src="assets/arrow_icon.png" alt=""></button>
-            <button><a href="home.html" style="text-decoration: none; color: white;">Back to Home</a></button>
+            <button type="submit">submit <i class='bx  bx-arrow-right-stroke-circle'></i></button>
+            <button><a href="home.html" style="text-decoration: none; color: white;"><i class='bx  bx-arrow-left-circle'></i>  Back to Home</a></button>
         </form>
         
     </div>
